--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
       href="https://fonts.googleapis.com/css2?family=Amaranth:ital@0;1&family=Arima+Madurai:wght@500;700;800&family=Lemon&family=Mirza:wght@400;500;600;700&family=Rancho&family=Sansita:wght@400;700&family=Satisfy&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Bevan&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Acme&family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&family=Bree+Serif&family=Courgette&family=Secular+One&family=Viga&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
