--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Ayan Chakraborty | Web Developer & Competitive Coder</title>
+    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -53,5 +54,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://kit.fontawesome.com/d295341e30.js" crossorigin="anonymous"></script>
+    <script src="bower_components/aos/dist/aos.js"></script> 
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
