--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://kit.fontawesome.com/d295341e30.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <!-- <script src="bower_components/aos/dist/aos.js"></script>  -->
     <script>
       AOS.init();
