Font-family changed

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,9 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Bevan&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Acme&family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&family=Bree+Serif&family=Courgette&family=Secular+One&family=Viga&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dekko&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Andika+New+Basic:ital@0;1&family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Baloo+Chettan+2:wght@400;500;600;700;800&family=Fresca&family=Miriam+Libre:wght@400;700&family=Montserrat+Alternates:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Short+Stack&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
